--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env*.*
 
 # vercel
 .vercel
@@ -40,3 +40,5 @@ database
 
 #keys
 access
+
+ecosystem.config.js
